--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </section>
 
         <section id="emb">
-            <iframe id="video" width="300" height="240" src="https://www.youtube.com/embed/Hj9v6pwTf8?start=11" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="video" width="300" height="240" src="https://www.youtube.com/embed/Hj9v6pwTf8"></iframe>
         </section>
 
         <section id="my-boxes">
